# combine_algs

./: .gitignore  CMakeLists.txt  README.md
BambooGardenTrimming/: CMakeLists.txt  main.cpp
BambooGardenTrimming/BGT/: BambooGardenTrimming.cpp  BambooGardenTrimming.h
BambooGardenTrimming/BGTCanvas/: BGTCanvas.h
BambooGardenTrimming/BGTController/: BGTController.cpp  BGTController.h
BambooGardenTrimming/BGTNode/: BGTNode.cpp  BGTNode.h
lab2/: CMakeLists.txt  graph.cpp  graph.h  index.cpp  lab2task
lab2/test/: input.txt  test.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/edge/: edge.cpp  edge.h
lab3/triangulation/: triangulation.cpp  triangulation.h
lab3/verge/: verge.cpp  verge.h
lab3/vertex/: vertex.cpp  vertex.h
